
This document provides a high-level view of the changes introduced in Asciidoctor by release.
For a detailed view of what has changed, refer to the {uri-repo}/commits/master[commit history] on GitHub.

== Unreleased

Improvments::

 * Increment counter (but not the corresponding attribute) if attribute is locked (#4013)
 * Use attribute as seed value for counter even if not already registered as a counter (#4014)

// tag::compact[]
== 2.0.13 (2021-04-10) - @mojavelinux

Bug Fixes::

  * Rollback change for #3470, which added logic to remove leading and trailing empty lines in an AsciiDoc include file; instead skip empty lines before processing document header (#3997)
  * Don't allow `counter` and `counter2` attribute directives to override locked attributes (#3939) (*@mogztter*)
  * Fix crash when resolving next value in sequence for counter with non-numeric value (#3940)
  * Honor list of tags following negated wildcard on include directive (#3932)
  * Update default stylesheet to remove dash in front of cite on nested quote block (#3847)
  * Don't mangle formatting macros when uppercasing section titles in man page output (#3892)
  * Don't escape hyphen in `manname` in man page output
  * Remove extra `.sp` line before content of verse block in man page output
  * Fix layout of footnotes in man page output (#3989)
  * Fix formatting of footnote text with URL in man page output (#3988)
  * Remove redundant trailing space on URL followed by non-adjacent text in man page output (#4004)
  * Use `.bp` macro at location of page break in man page output (#3992)

Improvements::

  * Extract method to create lexer and formatter in Rouge adapter (#3953) (*@Oblomov*)
  * Add support for pygments.rb 2.x (#3969) (*@slonopotamus*)
  * Allow `NullLogger` to be enabled by setting the `:logger` option to a falsy value (#3982)
  * Substitute attributes in manpurpose part of NAME section in manpage doctype (#4000)