@@ -20,7 +20,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        ruby: ['2.3', '2.4', '2.5', '2.6', '2.7', '3.0']
+        ruby: ['jruby-9.2.17.0', '2.3', '2.4', '2.5', '2.6', '2.7', '3.0']
         asciimath-version: [~]
         pygments-version: ['~> 2.0']
         rouge-version: [~]
@@ -33,8 +33,9 @@ jobs:
         - os: ubuntu-latest
           ruby: jruby-9.1.17.0
           pygments-version: ~
-        - os: ubuntu-latest
-          ruby: jruby-9.2.17.0
+        - os: windows-latest
+          ruby: jruby-9.1.17.0
+          pygments-version: ~
         - os: macos-latest
           ruby: '3.0'
         - os: ubuntu-latest
